mtp: fix segfault when device not found

https://bugzilla.gnome.org/show_bug.cgi?id=719495